refs #72 Misc fixes. - Chantilly: page decoration was broken. - Icrecream:    - Improve breadcrumb's vertical alignment.    - Fix 'unlink' button vertical alignment in specific-relation brick. - Do not set data-type attribute in HTML with 'None' value (in table-brick header). - billing: some missing data-type='money' attributes in bricks headers. - activities: fix calendar color square padding (2 themes).

--- a/creme/activities/static/chantilly/activities/css/activities.css
+++ b/creme/activities/static/chantilly/activities/css/activities.css
@@ -347,9 +347,13 @@
 .brick .activity-calendar-color-square {
     width: 13px;
     height: 13px;
+
+    margin-top: -3px;
+    margin-right: 3px;
+
     display: inline-block;
     vertical-align: middle;
-    margin-top: -3px;
+
     background: white;
 }
 
