--- a/creme/creme_core/static/chantilly/creme_core/css/creme.css
+++ b/creme/creme_core/static/chantilly/creme_core/css/creme.css
@@ -1206,7 +1206,7 @@ div.hat-bar {
 }
 
 .page-decoration div {
-    width: calc(50% - 20px);
+    width: calc(50% - 21px);
     border-top: 1px solid currentColor;
     height: 7px;
 }
